1999-08-22  Damon Chaplin  <damon@karuna.freeserve.co.uk>

	* gtkdoc-mktmpl.in: 
	* gtkdoc-mkdb.in: a few fixes to ParseStructDeclaration. It still
	has problems with nested structs/unions like those which occur in
	gtkclist.h and gtktypeutils.h.

	* configure.in: removed gtk-doc.spec from AC_OUTPUT, as	whoever wrote
	this forgot to add gtk-doc.spec.in to CVS.
	* Makefile.am: commented out gtk-doc.spec.

Wed Aug 18 03:55:30 1999  Owen Taylor  <otaylor@redhat.com>

	* gtkdoc-mktmpl.in: Propagate fix from gtkdoc-mkdb.in.
	:-(; need to libraryize, need to libraryize.

Wed Aug 18 03:55:30 1999  Owen Taylor  <otaylor@redhat.com>

	* gtkdoc-mkdb.in: Fix bug that was preventing
	structure field definitions from being output.

Wed Aug 18 23:25:23 1999  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Add /usr/lib/sgml/stylesheet to list
	of stylesheet directories. (Found in recent Debian
	packages)

1999-08-15  Damon Chaplin  <damon@karuna.freeserve.co.uk>

	* gtkdoc-mkdb.in: Output $decl_out as the struct rather than the
	original $declaration.

1999-08-12  Damon Chaplin  <damon@karuna.freeserve.co.uk>

	* gtkdoc-mkdb.in: 
	* gtkdoc-mktmpl.in: Added special case in ParseEnumDeclaration to
	handle GIOCondition which uses strange macros like this:
	typedef enum
	{
	  G_IO_IN	GLIB_SYSDEF_POLLIN,
	  ...
	The GLIB_SYSDEF_POLLIN macro expands to something like '=1'

1999-08-05  Damon Chaplin  <damon@karuna.freeserve.co.uk>

	* gtk-doc.dsl.in: output <br clear=all> after sections and at end of
	page so that right-aligned images aren't messed up quite as much.

Wed Aug  4 04:04:55 1999  Owen Taylor  <otaylor@redhat.com>

	* gtkdoc-mk{db,tmpl}.in (ParseStructDeclaration): Allow
	for bit fields.

	* gtkdoc-mktmpl.in (ReadObjectHierarchy): Remove
	call to MakeXref that slipped in accidentally.

Wed Aug  4 03:30:19 1999  Owen Taylor  <otaylor@redhat.com>

	* doc/style-guide.txt: Removed references to creating
	tables explicitely in favor of demonstrating new